GNOME Bugzilla – Bug 688821
Vimeo plugin is broken
Last modified: 2012-11-29 14:16:35 UTC
Invoking resolve() in Vimeo crashes the application. Reason is that the link used to get the URL has changed, and now it is a HTML page, not a XML one. In fact, Vimeo plugin needs a polishment: it should use quvi to solve the URL (as YouTube plugin), and should use also GrlNet instead of libsoup.
commit 55c048c28dbbce7849ac70123d8d63f46c4c900b Author: Juan A. Suarez Romero <jasuarez@igalia.com> Date: Thu Nov 29 14:12:14 2012 +0000 vimeo: Use quvi to get the URL Rely on libquvi to fetch the URL video to play. configure.ac | 11 +++++++---- src/vimeo/grl-vimeo.c | 2 +- src/vimeo/gvimeo.c | 112 ++++++++++++++++++++++++++++++++++++++++------------------------------------------------------------------------ src/vimeo/gvimeo.h | 2 +- 4 files changed, 49 insertions(+), 78 deletions(-) commit 028674eef56aadba68a1c4819098bcab4371e5ad Author: Juan A. Suarez Romero <jasuarez@igalia.com> Date: Thu Nov 29 11:53:41 2012 +0000 vimeo: Compute proper page size Fix the computing of page_size. Also, use the autosplit feature so Grilo takes care of requests bigger than the allowed page size. https://bugzilla.gnome.org/show_bug.cgi?id=688821 src/vimeo/grl-vimeo.c | 18 +++++++++++++----- 1 file changed, 13 insertions(+), 5 deletions(-) commit b7c1c82bbfd82a657bc19d8da332a68733976ec5 Author: Juan A. Suarez Romero <jasuarez@igalia.com> Date: Thu Nov 29 11:45:20 2012 +0000 bliptv: Use GrlNet instead of librest So we can use all the features added in GrlNet. https://bugzilla.gnome.org/show_bug.cgi?id=688821 configure.ac | 15 ++++++--------- src/vimeo/gvimeo.c | 92 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++--------------------------------- 2 files changed, 65 insertions(+), 42 deletions(-)